Fix a minor spacing problem.

--- a/src/index.less
+++ b/src/index.less
@@ -1,12 +1,3 @@
-html {
-    height: 100%;
-}
-
 body {
-    height: 100%;
-    margin: 16px;
-}
-
-#app {
-    height: 100%;
+    margin: 16px 16px 8px 16px;
 }
